--- a/resources/src/pug/components/include/_footer.pug
+++ b/resources/src/pug/components/include/_footer.pug
@@ -7,7 +7,7 @@ footer.c_footer
         p.c_footer-contents-title.t_Roboto.u_letter-spacing100.u_weight400 time Official SNS
         ul.c_footer-contents-item
           li.c_footer-contents-item-list
-            a(target="_blank" href="https://www.instagram.com/time_furniture/").t_flex
+            a(target="_blank" href="https://www.instagram.com/time_furniture.jp/").t_flex
               i.icon-Instagram
               span.u_letter-spacing50.u_weight400 公式Instagram
     p.c_footer-logo.u_md
