--- a/resources/src/pug/index.pug
+++ b/resources/src/pug/index.pug
@@ -65,11 +65,11 @@ block content
               |⾄福の時間の創造
           div.indexStory_text.u_lineHeightLarge.u_letter-spacing150.u_anime-fadeUp(data-anime="addClass")
             | ファニチャーブランド『time-タイム-』は、
-            br.u_md
+            br.u_desktop
             | 20世紀半ば（1940〜60年代）の、いわゆるミッドセンチュリーのデザインを踏襲し、
-            br.u_md
+            br.u_desktop
             | 現代の製産技術で耐久性をもたせ、⻑い時間、何世代にも渡り楽しんでいただける、
-            br.u_md
+            br.u_desktop
             | 時間軸デザイン（タイムアクシス・デザイン）の家具をご提案いたします。
     div.indexOffer
       div.indexOffer_images
