--- a/resources/src/pug/components/include/_openNav.pug
+++ b/resources/src/pug/components/include/_openNav.pug
@@ -11,7 +11,7 @@ div.c_openNav(data-button-contents="hamburger-button-contents" aria-expanded="fa
         a(href="#Support" data-button="hamburger-button" aria-expanded="false") Support
     ul.c_openNav-sns.t_flex
       li.c_openNav-sns-item
-        a(href="https://www.instagram.com/time_furniture/" target="_blank")
+        a(href="https://www.instagram.com/time_furniture.jp" target="_blank")
           i.icon-Instagram
 
 
