--- a/resources/src/pug/index.pug
+++ b/resources/src/pug/index.pug
@@ -959,7 +959,7 @@ block content
           span.p_title-number.u_weight500 To Customers
         h3.p_headline.u_weight600.u_letter-spacing150.u_lineHeight.u_anime-fadeUp(data-anime="addClass")
           span timeをご購⼊されたお客様へ
-        ul.p_gui.t_flex.p_gui__left(data-tab-target="support")
+        ul.p_gui.t_flex.p_gui__left.p_gui__jp(data-tab-target="support")
           li.p_gui-list.__isActive
             button(type="button").u_letter-spacing50.u_weight500
               span 取り扱い上の注意
