--- a/resources/src/sass/app/parts/_gui.scss
+++ b/resources/src/sass/app/parts/_gui.scss
@@ -83,6 +83,7 @@
       font-style:inherit;
       transition: all .5s var(--transition);
       opacity: 1;
+      font-weight: 600;
       @include mq(m){
         font-size: 10px;
       }
@@ -92,6 +93,7 @@
       span {
         display: inline-block;
         position: relative;
+        font-weight: 600;
       }
     }
   }
