--- a/resources/src/sass/app/pages/_home.scss
+++ b/resources/src/sass/app/pages/_home.scss
@@ -233,13 +233,12 @@
       margin-bottom: -110px;
       @include mq(m){
         margin-bottom: -50px;
-        width: calc(100% - 226px);
       }
     }
     &-main {
       width: 56%;
       @include mq(m){
-        width: 226px;
+        margin-bottom: -50px;
       }
     }
   }
