--- a/resources/src/pug/index.pug
+++ b/resources/src/pug/index.pug
@@ -595,7 +595,7 @@ block content
                 li.p_spec-item-list
                     p.u_letter-spacing50.u_lineHeight
                       span.u_weight400.t_Roboto
-                        |1100×D550×H560
+                        |W1100×D550×H560
                       br
                       small 北海道産ミズナラ三等材無垢／オイル塗装
 
@@ -645,7 +645,7 @@ block content
               h3.p_subject-title.u_weight700.u_letter-spacing50.t_Roboto tv140 board
               div.p_subject-view.u_letter-spacing50.u_lineHeight
                 p
-                  | コンパクトながら存在感のあるミニマルデザインで、お部屋を圧迫しません。扉は引き戸になっています。脚部の高さも確保されていますので、ロボット掃除機などでの清掃もスムーズです。
+                  | コンパクトながら存在感のあるミニマルデザインで、お部屋を圧迫しません。扉は引き戸になっています。脚部の高さも（170mm)確保されていますので、ロボット掃除機などでの清掃もスムーズです。
           div.p_thumbnailTabs
             div.t_inner.p_thumbnailTabs-body
               ul.p_thumbnailTabs-list(data-tab-target="item-sub3")
